...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sdE-8c-JJO" userLabel="Like Button">
                                                    <rect key="frame" x="356" y="4" width="42" height="42"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="like_button_on"/>
                                                    <connections>
                                                        <action selector="likeButtonClicked" destination="pZ9-It-hcX" eventType="touchUpInside" id="YAC-KX-0EH"/>
                                                    </connections>
                                                </button>
...
                                <connections>
                                    <outlet property="delegate" destination="vFA-PK-mUO" id="kv0-xX-rp1"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ulJ-ew-3XA">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="IPg-0F-NRx"/>
                                    <constraint firstAttribute="width" constant="48" id="UCj-jw-g3r"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
...
                                    <constraint firstAttribute="width" constant="60" id="dm7-Cc-Y55"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pWq-kj-r8a">
                                <rect key="frame" x="16" y="732" width="382" height="48"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="qVq-dz-pr0"/>
                                </constraints>
                                <state key="normal" title="Button"/>
...
